# fastapi_sqlalchemy_alembic

./: .env  .env.test  README.md  alembic.ini  main.py  plan.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2b7cd17bfd4e_add_user_and_todo_tables.py
app/: config.py  database.py  main.py  models.py  schemas.py
app/models/: todo.py  user.py
app/routes/: todos.py  users.py
app/schemas/: todo.py  user.py
app/services/: todo_service.py  user_service.py
tests/: conftest.py  test_database.py  test_models.py  test_schemas.py
tests/test_routes/: test_todos.py  test_users.py
